# NovaTorch

./: .gitignore  NovaTorch logo
.shamash/: custom-rules.json
Nova/: CMakeLists.txt  Nova Logo  Nova.cpp  Nova.h  wavecube_compute  wavecube_compute.cpp
Nova/Core/: config.h  core.cpp  core.h  core_base.cpp  core_base.h  nova_buffer_arena.cpp  nova_buffer_arena.h  nova_command_batch.cpp  nova_command_batch.h  nova_compute.cpp  nova_compute.h  nova_cross_talk_buffer.cpp  nova_cross_talk_buffer.h  nova_graphics.cpp  nova_graphics.h  nova_multi_queue.cpp  nova_multi_queue.h
Nova/Core/components/: genesis.h  lexicon.h  logger.h  obj_loader.cpp  obj_loader.h  raii_wrappers.h  resource_registry.h
Nova/Core/modules/: device.cpp  management.cpp  presentation.cpp  render.cpp
Nova/Core/modules/atomic/: atomic.h
Nova/Core/modules/pipeline/: pipeline.cpp  pipeline.h  scene.cpp
novatorch/: CMakeLists.txt
novatorch/csrc/bindings/: module.cpp
novatorch/csrc/bridge/: nova_allocator.cpp  nova_allocator.h  nova_batch_context.cpp  nova_batch_context.h  nova_compiled_graph.cpp  nova_compiled_graph.h  nova_context.cpp  nova_context.h  nova_descriptor_pool.cpp  nova_descriptor_pool.h  nova_guard.cpp  nova_guard.h  nova_hooks.cpp  nova_hooks.h  nova_ops.h  nova_ops_activation.cpp  nova_ops_comparison.cpp  nova_ops_copy.cpp  nova_ops_dispatch.cpp  nova_ops_elementwise.cpp  nova_ops_extra.cpp  nova_ops_factory.cpp  nova_ops_inplace.cpp  nova_ops_loss.cpp  nova_ops_math.cpp  nova_ops_matmul.cpp  nova_ops_reduce.cpp  nova_pipeline_cache.cpp  nova_pipeline_cache.h  nova_register.cpp  nova_staging_pool.cpp  nova_staging_pool.h  nova_storage.cpp  nova_storage.h
novatorch/python/novatorch/: __init__.py  compiler.py
novatorch/shaders/: activation_relu.comp  activation_sigmoid.comp  activation_tanh.comp  addcdiv.comp  addcmul.comp  addmm.comp  bmm.comp  clamp.comp  cmp_eq.comp  cmp_ge.comp  cmp_gt.comp  cmp_le.comp  cmp_lt.comp  cmp_ne.comp  compile_shaders.cmake  copy_buffer.comp  dropout_backward.comp  elementwise_add.comp  elementwise_div.comp  elementwise_mul.comp  elementwise_neg.comp  elementwise_sub.comp  fill_scalar.comp  isnan.comp  log_softmax.comp  math_abs.comp  math_exp.comp  math_log.comp  math_max.comp  math_min.comp  math_pow.comp  math_reciprocal.comp  math_rsqrt.comp  math_sqrt.comp  matmul.comp  mul_scalar.comp  nll_loss.comp  reduce_mean.comp  reduce_sum.comp  sigmoid_backward.comp  (+6 more)
tests/: conftest.py  test_mlp_training.py  test_ops.py
